// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetCard renders meta container 1`] = `
<div>
  <div
    class="sc-6dcdf034-0 sNBAb"
  >
    <a
      href="/assets/abc-123"
    >
      <div>
        <p
          class="Typography__StyledTypography-sc-179guof-0 eza-DtJ"
        >
          some title
        </p>
      </div>
      <div
        class="sc-6dcdf034-1 dfuxNb"
        data-testid="meta-container"
      >
        <p
          class="Typography__StyledTypography-sc-179guof-0 efTvKc"
        >
          Some label
           
          Some value
        </p>
      </div>
      <div>
        <p
          class="Typography__StyledTypography-sc-179guof-0 llQfUJ sc-429d35d-0 gflvhq"
        >
          some description
        </p>
      </div>
    </a>
  </div>
</div>
`;

exports[`AssetCard renders no meta container 1`] = `
<div>
  <div
    class="sc-6dcdf034-0 sNBAb"
  >
    <a
      href="/assets/abc-123"
    >
      <div>
        <p
          class="Typography__StyledTypography-sc-179guof-0 eza-DtJ"
        >
          some title
        </p>
      </div>
      <div>
        <p
          class="Typography__StyledTypography-sc-179guof-0 llQfUJ sc-429d35d-0 gflvhq"
        >
          some description
        </p>
      </div>
    </a>
  </div>
</div>
`;
